# CommandLine-Calculator

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: Run-Tests.yaml
docs/: index.html
docs/pages/: downloads.html
docs/prism/: prism.css  prism.js
docs/scripts/: download.js  otherversion.js  trimmer.js
docs/styles/: style.css
src/: main.py
src/App/: app.py  historytracker.py
test/: conftest.py  test_historytracker.py  test_isvalid.py  test_main.py
