[tool.poetry]
name = "Simple-Calculator"
version = "0.2.0"
description = "It a basic python gui-application that help you with simple calculation."
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
