[tool.poetry]
name = "Simple-Calculator"
version = "0.2.0"
description = "It a basic python gui-application that help you with simple calculation."
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
